<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/addinstalment_confirmButton"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/addinstalmentDatePicker"
        android:layout_alignStart="@+id/addinstalmentDatePicker" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/addinstalment_cancelButton"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/addinstalmentDatePicker"
        android:layout_alignEnd="@+id/addinstalmentDatePicker" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addinstalmentDatePicker"
        android:calendarViewShown="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instalment_input"
        android:id="@+id/addinstalmentTextView1"
        android:layout_below="@+id/addinstalmentDatePicker"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money_input"
        android:id="@+id/addinstalmentTextView2"
        android:layout_below="@+id/addinstalmentTextView1"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_input"
        android:id="@+id/addinstalmentTextView3"
        android:layout_below="@+id/addinstalmentTextView2"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:textSize="22dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/addinstalment_numEditText"
        android:layout_below="@+id/addinstalmentDatePicker"
        android:layout_toRightOf="@+id/addinstalmentTextView1"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/addinstalment_moneyEditText"
        android:layout_below="@+id/addinstalmentTextView1"
        android:layout_toRightOf="@+id/addinstalmentTextView2"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addinstalment_noteEditText"
        android:layout_below="@+id/addinstalmentTextView2"
        android:layout_toRightOf="@+id/addinstalmentTextView3"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>
