<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/addone_confirmButton"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/addoneDatePicker"
        android:layout_alignStart="@+id/addoneDatePicker" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/addone_cancelButton"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/addoneDatePicker"
        android:layout_alignEnd="@+id/addoneDatePicker" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addoneDatePicker"
        android:calendarViewShown="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money_input"
        android:id="@+id/addoneTextView1"
        android:layout_below="@+id/addoneDatePicker"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_input"
        android:id="@+id/addoneTextView2"
        android:layout_below="@+id/addoneTextView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="57dp"
        android:textSize="22dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/addone_moneyEditText"
        android:layout_above="@+id/addoneTextView2"
        android:layout_toRightOf="@+id/addoneTextView1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addone_noteEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/addoneTextView2"
        android:layout_alignLeft="@+id/addone_moneyEditText"
        android:layout_alignStart="@+id/addone_moneyEditText" />

</RelativeLayout>
